--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "azure-ai-inference>=1.0.0b9",
     "azure-identity>=1.23.0",
     "azure-search-documents>=11.6.0b12",
     "beautifulsoup4>=4.13.4",
@@ -14,5 +15,6 @@ dependencies = [
     "langchain-text-splitters>=0.3.8",
     "langgraph>=0.4.8",
     "openai>=1.84.0",
+    "pydantic>=2.11.5",
     "requests>=2.32.3",
 ]
